# blog

./: .gitignore  404.html  CNAME  DJSet.hs  Dockerfile  LICENSE.code  LICENSE.content  README.md  about.html  atom.xml  blog.cabal  config.toml  custom.css  deploy.sh  gpg.html  index.html  new_blog_post.sh  preview.sh  robots.txt  search_index.en.json  site.hs  sitemap.xml
archive/: index.html
blog/: index.html
content/: _index.md
css/: main.css  main.less
dj-sets/: 2017-02-07.csv  2017-03-02.csv  2017-03-16.csv  2017-03-30.csv  2017-04-25.csv  2017-04-27.csv  2017-05-16.csv  2017-06-13.csv  2017-06-29.csv  2017-07-01.csv  2017-07-13.csv  2017-07-22.csv  2017-08-01.csv  2017-09-05.csv  2017-09-07.csv  2017-10-12.csv  2017-10-24.csv  README
drafts/: 2017-07-05-a-few-notes-about-djing-swing-dances.markdown
posts/: 2012-05-29-fedora-17-on-raspberry-pi.markdown  2012-05-29-moving-to-jekyll.markdown  2012-06-04-elixir-language-is-now-in-fedora-17.markdown  2012-06-16-piano-song-from-how-i-met-your-mother.markdown  2012-07-11-python-flask-coming-to-epel-6.markdown  2013-07-09-goodbye-to-a-true-friend.markdown  2013-09-01-how-to-not-look-like-a-fool-due-to-haproxy.markdown  2013-12-28-fedora-coprs-and-eval-dot-so.markdown  2013-12-29-switching-to-hakyll.markdown  2013-12-30-holiday-hacking.markdown  2014-02-06-today-is-my-two-year-anniversary-at-red-hat.markdown  2014-05-24-i-love-being-wrong.markdown  2014-06-09-bodhi2-fad.markdown  2014-07-18-fedora-jenkins-fedmsg-enablement.markdown  2014-07-24-my-review-of-lambda-jam-2014.markdown  2016-07-13-on-death.markdown  (+16 more)
(+45 files in other folders)
