name:                blog
version:             0.1.0.0
synopsis:            Ricky Elrod's Blog
-- description:
homepage:            http://elrod.me/
license:             AllRightsReserved
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
copyright:           (c) 2017 Ricky Elrod
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable blog
  main-is: site.hs
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4 && <5
    , bytestring
    , cassava >= 0.4 && < 1
    , containers >= 0.5 && < 1
    , hakyll >= 4.4.2.0
    , pandoc >= 1.12.2.1
    , split
    , time
    , time-units
    , utf8-string
    , vector
  -- hs-source-dirs:
  default-language: Haskell2010

test-suite hlint
  main-is: hlint.hs
  type: exitcode-stdio-1.0
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , hlint >= 1.7
